# pgs-catalog-explorer

./: .gitignore  README.md  app.py  compare.py  data_layer.py  generate_sample_data.py  pyproject.toml  replit.md  utils.py
.github/workflows/: deploy.yml
attached_assets/: Pasted-Good-feedback-from-Lance-and-Gw-nlyn-Let-me-break-this-_1770380936864.txt  Pasted-Great-idea-a-network-view-would-show-the-full-landscape_1771645975065.txt  Pasted-Here-s-the-prompt-for-the-Replit-agent-Feature-Request-_1771645959859.txt  Pasted-PGS-Catalog-Explorer-Browse-and-explore-polygenic-score_1770277145335.txt  Pasted-streamlit-runtime-caching-cache-errors-CacheReplayClosu_1770273918580.txt  content-1770258739190.md
data/: pgs_pairwise_comparison_pipeline_optimized.ipynb  pgs_pairwise_stats.parquet  pipeline_metadata.json
docs/: pgs_pairwise_comparison_report.md  react_migration_assessment.md
scripts/: convert_to_sqlite.py  extract_sample_variants.py
