[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ijson>=3.4.0.post0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "plotly[jupyterlab]>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "streamlit>=1.54.0",
    "tqdm>=4.67.3",
]
